# cow-rs

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAP.md  PROPERTIES.md  README.md  ROADMAP.md  SECURITY.md  cliff.toml  llvm-cov-summary.txt  release.toml  rust-toolchain.toml
crates/alloy/: Cargo.toml  README.md
crates/alloy-provider/: Cargo.toml  README.md
crates/alloy-provider/src/: builder.rs  client.rs  conversion.rs  error.rs  lib.rs  provider.rs  read_contract.rs  retry.rs
crates/alloy-provider/tests/: asyncprovider_contract.rs  builder_contract.rs  cancellation_contract.rs  compile_fail.rs  dependency_boundary_contract.rs  error_class_contract.rs  provider_contract.rs  read_contract_no_panic.rs  read_contract_parity.rs  redaction_contract.rs  retry_contract.rs  seam_contract.rs
crates/alloy-signer/: Cargo.toml  README.md
crates/alloy-signer/src/: builder.rs  conversion.rs  error.rs  lib.rs  signer.rs
crates/alloy-signer/tests/: asyncsigner_contract.rs  cancellation_contract.rs  compile_fail.rs  dependency_boundary_contract.rs  eip191_reference_vectors.rs  eip712_reference_vectors.rs  proptests.rs  redaction_contract.rs  signer_contract.rs  signer_error_trait_contract.rs
crates/alloy/src/: builder.rs  client.rs  conversion.rs  error.rs  handle.rs  lib.rs  read_contract.rs
crates/alloy/tests/: asyncprovider_contract.rs  asyncsigningprovider_contract.rs  builder_contract.rs  cancellation_contract.rs  chain_coherence.rs  chain_coherence_mismatch.rs  compile_fail.rs  eip712_reference_vectors.rs  error_contract.rs  handle_survives_drop.rs  log_provider_contract.rs  no_broadcast_for_sign_transaction.rs  provider_contract.rs  read_contract_contract.rs  redaction_contract.rs  send_transaction_does_not_wait_for_confirmation.rs  signer_error_trait_contract.rs  signing_provider_contract.rs
crates/app-data/: Cargo.toml  README.md
crates/app-data/benches/: stringify.rs
crates/app-data/schemas/: flashloan-v0.2.0.json  hook-v0.2.0.json  partner-fee-v1.0.0.json  quote-v1.1.0.json
crates/app-data/src/: cid.rs  errors.rs  fetch.rs  info.rs  lib.rs  pinning.rs  schema.rs  types.rs
crates/app-data/tests/: app_data_info_contract.rs  canonical_json_contract.rs  cid_contract.rs  error_contract.rs  error_redaction_contract.rs  error_variant_shape.rs  fetch_contract.rs  fetch_telemetry_contract.rs  flashloan_contract.rs  hooks_contract.rs  ipfs_config_redaction_contract.rs  json_recursion_contract.rs  metadata_signer_contract.rs  parity_contract.rs  partner_fee_contract.rs  pinning_contract.rs  property_contract.rs  schema_contract.rs  (+5 more)
crates/browser-wallet/: Cargo.toml  README.md
crates/component/: Cargo.toml  README.md
crates/composable/: Cargo.toml  README.md
crates/contracts/: Cargo.toml  README.md  build.rs  deployment-coverage.yaml  deployment-provenance.yaml  registry.toml
crates/core/: Cargo.toml  README.md
crates/cow-shed/: Cargo.toml  README.md
crates/js/: Cargo.toml  README.md
crates/orderbook/: Cargo.toml  README.md
crates/pure-helpers/: Cargo.toml  README.md
crates/sdk/: Cargo.toml  README.md
crates/signing/: Cargo.toml  README.md
crates/subgraph/: Cargo.toml  README.md
crates/test/: Cargo.toml  README.md
crates/test-utils/: Cargo.toml
crates/trading/: Cargo.toml  README.md
crates/transport-policy/: Cargo.toml  README.md
crates/transport-wasm/: Cargo.toml  README.md
crates/wasm/: Cargo.toml  README.md
examples/native/: Cargo.toml  README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_amount_from_units.rs  fuzz_amount_parse.rs  fuzz_amount_parse_units.rs  fuzz_app_data_cid_roundtrip.rs  fuzz_app_data_merge.rs  fuzz_app_data_params_from_doc.rs  fuzz_app_data_size_limit.rs  fuzz_append_query_string.rs  fuzz_calculate_total_fee.rs  fuzz_cid_to_app_data_hex.rs  fuzz_composable_merkle_roundtrip.rs  fuzz_contract_call_serde.rs  fuzz_core_identity_validators.rs  fuzz_decimal_amount_from_whole_approx.rs  fuzz_decode_magic_value_response.rs  fuzz_decoded_body_canonical_status_text.rs  fuzz_ecdsa_v_normalization.rs  fuzz_eip1271_signature_data_codec.rs  fuzz_erc20_permit_typed_data_hash.rs  fuzz_eth_flow_event_log_decode.rs  fuzz_ethflow_create_order_encode.rs  fuzz_flashloan_hints.rs  fuzz_hash_order_cancellations.rs  fuzz_hex_quantity_helpers.rs  fuzz_hook_list_deserialize.rs  fuzz_jitter_delay_for_attempt.rs  fuzz_json_to_dyn_value.rs  fuzz_normalize_ecdsa_signature_str.rs  fuzz_onchain_order_log_decode.rs  fuzz_order_bounds_validator.rs  fuzz_order_signature_classify.rs  fuzz_order_uid_pack_unpack.rs  fuzz_orderbook_rejection_code.rs  fuzz_orderbook_rejection_decode.rs  fuzz_parse_retry_after.rs  fuzz_partner_fee_from_value.rs  fuzz_recover_ecdsa_address.rs  fuzz_recoverable_signature_differential.rs  fuzz_recoverable_signature_parse_hex.rs  fuzz_redact_response_body.rs  (+18 more)
reservations/cow-sdk-app-data/: Cargo.toml  README.md
reservations/cow-sdk-bridging-across/: Cargo.toml  README.md
reservations/cow-sdk-bridging-bungee/: Cargo.toml  README.md
tests/: Cargo.toml  alloy_provider_invariant_covers_every_published_crate.rs  alloy_read_contract_parity_invariant.rs  alloy_signer_invariant_covers_every_published_crate.rs  alloy_two_family_lockfile_invariant.rs  alloy_two_family_pin_lockstep.rs  alloy_umbrella_composition.rs  component_wit_record_drift.rs  cow_shed_typed_data_digest.rs  dependency_default_features_audit.rs  msrv_consistency.rs  services_drift_report_schema.rs  signer_rejection_propagation_invariant.rs  supported_chains_doc_table.rs  transaction_lifecycle_cross_adapter_invariant.rs  wasm_dependency_invariant.rs  workspace_alloy_pin_lockstep.rs
tests/support/: published_crates.rs  rpc.rs
xtask/: Cargo.toml
xtask/src/: changelog.rs  lib.rs  main.rs  version_surface.rs
xtask/tests/: check_adr_coverage.rs  check_chain_patch_eligibility.rs  check_deny_unknown_fields.rs  check_enum_policy.rs  check_msrv_notice.rs  check_panic_allowlist.rs  check_property_citations.rs  check_workspace_versions.rs  classify_release.rs  openapi_coverage.rs  registry_confirm.rs  vendor_openapi.rs
(+1775 files in other folders)
