[workspace]
members = [
  "crates/core",
  "crates/contracts",
  "crates/signing",
  "crates/app-data",
  "crates/orderbook",
  "crates/trading",
  "crates/subgraph",
  "crates/browser-wallet",
  "crates/transport-wasm",
  "crates/sdk",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/cowdao-grants/cow-rs"
rust-version = "1.94.0"
version = "0.1.0"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.rustdoc]
all = "warn"
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
# Enable the pedantic and nursery groups as broad warn-level review
# expectations. Priority = -1 lets any individually-denied lint below still
# override the group so a specific deny wins over the group warn.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# async_trait(?Send) is the deliberate bridge shape for browser-wallet and
# other wasm-bound async surfaces, so the nursery future-Send check flags
# every intentional non-Send future by design.
future_not_send = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
unreadable_literal = "warn"

[workspace.dependencies]
alloy-dyn-abi = { version = "1.5.7", default-features = false, features = ["std"] }
alloy-json-abi = { version = "1.5.7", default-features = false, features = ["std", "serde_json"] }
alloy-primitives = { version = "1.5.7", default-features = false, features = ["std"] }
alloy-sol-macro = "1.5.7"
alloy-sol-types = "1.5.7"
bytes = { version = "1.9", default-features = false, features = ["std"] }
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.1.2"
hex = "0.4.3"
js-sys = "0.3.82"
jsonschema = { version = "0.45.1", default-features = false }
multibase = "0.9.2"
num-bigint = "0.4.6"
pin-project-lite = "0.2"
proptest = "1.11"
http = "1.4.0"
reqwest = { version = "0.13.2", default-features = false }
serde-wasm-bindgen = "0.6.5"
sha3 = "0.11.0"
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tokio = { version = "1.51.1", default-features = false }
tokio-util = { version = "0.7.18", default-features = false }
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4.55"
wasm-bindgen-test = "0.3.68"
web-sys = { version = "0.3.82", default-features = false }
