[workspace]
members = [
  "crates/core",
  "crates/contracts",
  "crates/signing",
  "crates/app-data",
  "crates/cow-shed",
  "crates/transport-policy",
  "crates/orderbook",
  "crates/pure-helpers",
  "crates/trading",
  "crates/subgraph",
  "crates/browser-wallet",
  "crates/transport-wasm",
  "crates/wasm",
  "crates/alloy-provider",
  "crates/alloy-signer",
  "crates/alloy",
  "crates/sdk",
  "tests",
]
resolver = "3"

[workspace.package]
authors = ["CoW Protocol Maintainers <contact@cow.fi>"]
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/cowdao-grants/cow-rs"
rust-version = "1.94.0"
version = "0.1.0"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.rustdoc]
all = "warn"
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
# Enable the pedantic and nursery groups as broad warn-level review
# expectations. Priority = -1 lets any individually-denied lint below still
# override the group so a specific deny wins over the group warn.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# async_trait(?Send) is the deliberate bridge shape for browser-wallet and
# other wasm-bound async surfaces, so the nursery future-Send check flags
# every intentional non-Send future by design.
future_not_send = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
unreadable_literal = "warn"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[workspace.dependencies]
alloy-dyn-abi = { version = "1.5.7", default-features = false }
alloy-consensus = { version = "2.0.4", default-features = false }
alloy-json-rpc = { version = "2.0.4", default-features = false }
alloy-json-abi = { version = "1.5.7", default-features = false, features = ["serde_json"] }
alloy-network = { version = "2.0.4", default-features = false }
alloy-primitives = { version = "1.5.7", default-features = false }
alloy-provider = { version = "2.0.4", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-rpc-types-eth = { version = "2.0.4", default-features = false, features = ["serde"] }
alloy-signer = { version = "2.0.4", default-features = false }
alloy-signer-local = { version = "2.0.4", default-features = false }
alloy-serde = { version = "1.5.7", default-features = false }
alloy-sol-macro = "1.5.7"
alloy-sol-types = { version = "1.5.7", default-features = false }
alloy-transport = { version = "2.0.4", default-features = false }
alloy-transport-http = { version = "2.0.4", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
async-lock = "3.4.2"
async-trait = "0.1.89"
console_error_panic_hook = "0.1.7"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
futures-timer = "3.0.3"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
gloo-timers = { version = "0.4.0", features = ["futures"] }
httpdate = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_jcs = "0.2.0"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
syn = { version = "2.0.117", features = ["full"] }
thiserror = "2.0.18"
toml = "1.1.2"
hex = "0.4.3"
js-sys = "0.3.95"
jsonschema = { version = "0.45.1", default-features = false }
multibase = "0.9.2"
num-bigint = "0.4.6"
parking_lot = "0.12.5"
pin-project-lite = "0.2"
proptest = "1.11"
http = "1.4.0"
reqwest = { version = "0.13.3", default-features = false }
serde-wasm-bindgen = "0.6.5"
sha3 = "0.11.0"
sha2 = { version = "0.10.9", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
trybuild = "1.0.116"
tsify = { version = "0.5", default-features = false, features = ["js"] }
tokio = { version = "1.52.2", default-features = false }
tokio-util = { version = "0.7.18", default-features = false }
url = "2.5.8"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
wasm-bindgen-test = "0.3.68"
web-sys = { version = "0.3.95", default-features = false }
web-time = "1.1.0"
wiremock = "0.6.5"
