[package]
name = "cow-sdk-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.12"
arbitrary = { version = "=1.4.2", features = ["derive"] }
hex = "=0.4.3"
serde_json = "=1.0.149"
alloy-sol-types = "=1.5.7"
sha3 = "=0.11.0"
cow-sdk-contracts = { path = "../crates/contracts" }
cow-sdk-core = { path = "../crates/core" }
cow-sdk-orderbook = { path = "../crates/orderbook" }
cow-sdk-signing = { path = "../crates/signing" }
cow-sdk-app-data = { path = "../crates/app-data" }
cow-sdk-subgraph = { path = "../crates/subgraph" }
cow-sdk-trading = { path = "../crates/trading" }

[[bin]]
name = "fuzz_order_uid_pack_unpack"
path = "fuzz_targets/fuzz_order_uid_pack_unpack.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_typed_data_digest"
path = "fuzz_targets/fuzz_typed_data_digest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_app_data_cid_roundtrip"
path = "fuzz_targets/fuzz_app_data_cid_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_order_signature_classify"
path = "fuzz_targets/fuzz_order_signature_classify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_subgraph_graphql_error_decode"
path = "fuzz_targets/fuzz_subgraph_graphql_error_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_settlement_settle_encode"
path = "fuzz_targets/fuzz_settlement_settle_encode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_settlement_invalidate_order_encode"
path = "fuzz_targets/fuzz_settlement_invalidate_order_encode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ethflow_create_order_encode"
path = "fuzz_targets/fuzz_ethflow_create_order_encode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_erc20_permit_typed_data_hash"
path = "fuzz_targets/fuzz_erc20_permit_typed_data_hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_order_bounds_validator"
path = "fuzz_targets/fuzz_order_bounds_validator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_vault_relayer_transfer_from_accounts_encode"
path = "fuzz_targets/fuzz_vault_relayer_transfer_from_accounts_encode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ecdsa_v_normalization"
path = "fuzz_targets/fuzz_ecdsa_v_normalization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_recover_ecdsa_address"
path = "fuzz_targets/fuzz_recover_ecdsa_address.rs"
test = false
doc = false
bench = false

[workspace]
# The fuzz crate stands alone because cargo-fuzz requires a nightly-only
# toolchain with unstable RUSTFLAGS. Embedding it in the workspace at the
# repo root would force every other crate onto the nightly channel.
