[package]
name = "cow-rs-workspace-tests"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dev-dependencies]
cow-sdk-core = { path = "../crates/core", version = "0.1.0" }
toml.workspace = true

[[test]]
name = "msrv_consistency"
path = "msrv_consistency.rs"

[[test]]
name = "workspace_alloy_pin_lockstep"
path = "workspace_alloy_pin_lockstep.rs"

[[test]]
name = "dependency_default_features_audit"
path = "dependency_default_features_audit.rs"

[[test]]
name = "alloy_provider_invariant_covers_every_published_crate"
path = "alloy_provider_invariant_covers_every_published_crate.rs"

[[test]]
name = "services_drift_report_schema"
path = "services_drift_report_schema.rs"

[[test]]
name = "supported_chains_doc_table"
path = "supported_chains_doc_table.rs"
