[package]
name = "cow-rs-workspace-tests"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dev-dependencies]
cow-sdk = { path = "../crates/sdk", version = "0.1.0", features = ["alloy"] }
cow-sdk-alloy = { path = "../crates/alloy", version = "0.1.0" }
cow-sdk-core = { path = "../crates/core", version = "0.1.0" }
cow-sdk-trading = { path = "../crates/trading", version = "0.1.0" }
serde_json.workspace = true
tokio = { version = "1.51.1", default-features = false, features = ["macros", "rt-multi-thread"] }
toml.workspace = true
wiremock = "0.6.5"

[[test]]
name = "msrv_consistency"
path = "msrv_consistency.rs"

[[test]]
name = "workspace_alloy_pin_lockstep"
path = "workspace_alloy_pin_lockstep.rs"

[[test]]
name = "dependency_default_features_audit"
path = "dependency_default_features_audit.rs"

[[test]]
name = "alloy_provider_invariant_covers_every_published_crate"
path = "alloy_provider_invariant_covers_every_published_crate.rs"

[[test]]
name = "alloy_signer_invariant_covers_every_published_crate"
path = "alloy_signer_invariant_covers_every_published_crate.rs"

[[test]]
name = "alloy_umbrella_composition"
path = "alloy_umbrella_composition.rs"

[[test]]
name = "alloy_two_family_pin_lockstep"
path = "alloy_two_family_pin_lockstep.rs"

[[test]]
name = "services_drift_report_schema"
path = "services_drift_report_schema.rs"

[[test]]
name = "supported_chains_doc_table"
path = "supported_chains_doc_table.rs"
