[package]
name = "cow-sdk-alloy-signer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Alloy-backed local-keystore AsyncSigner adapter for the CoW Protocol Rust SDK"
readme = "README.md"
documentation = "https://docs.rs/cow-sdk-alloy-signer"
homepage = "https://github.com/cowdao-grants/cow-rs"
keywords = ["cow-protocol", "alloy", "signer", "ethereum", "eip712"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu"]

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = ["eip712"]
eip712 = ["alloy-signer/eip712", "alloy-signer-local/eip712"]
tracing = ["dep:tracing"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cow-sdk-core = { path = "../core", version = "0.1.0" }
cow-sdk-contracts = { path = "../contracts", version = "0.1.0" }

alloy-consensus.workspace = true
alloy-dyn-abi = { workspace = true, features = ["std", "eip712"] }
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["k256"] }
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types = { workspace = true, features = ["std"] }
async-trait.workspace = true
hex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
cow-sdk-signing = { path = "../signing", version = "0.1.0" }
proptest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild.workspace = true
